Corrección de último momento

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -94,7 +94,7 @@ body
 							li.transparente(style='background-image:url("img/conoceme/6.jpg")')
 								span LIBROS
 							li.transparente(style='background-image:url("img/conoceme/7.jpg")')
-								span ADMINISTRACIÓN
+								span(style='font-size:65px') ADMINISTRACIÓN
 							li.transparente(style='background-image:url("img/conoceme/8.jpg");background-position:center')
 								span SER MEJOR
 							li.transparente(style='background-image:url("img/conoceme/9.png")')
