--- a/jade/index.jade
+++ b/jade/index.jade
@@ -97,7 +97,7 @@ body
 								span(style='font-size:65px') ADMINISTRACIÓN
 							li.transparente(style='background-image:url("img/conoceme/8.jpg");background-position:center')
 								span SER MEJOR
-							li.transparente(style='background-image:url("img/conoceme/9.png")')
+							li.transparente(style='background-image:url("img/conoceme/9.jpg");background-position:center;background-size:contain')
 								span ROSARIO
 			.container
 			+bloque('habilidades','fadeInLeft','Mis habilidades','En cada trabajo que realizo pongo todo de mi parte, me gustan los desafíos y estar mejorando cada día más para el desarrollo de la empresa y mi desarrollo profesional mediante el trabajo diario.')				
@@ -132,8 +132,7 @@ body
 						li
 							p Optimista
 						li
-							p Graciosa
-								
+							p Graciosa			
 			.container
 			section.text-center
 				.habilidades
